@@ -16,6 +16,10 @@ lib/SPVM/Net/SSLeay/ASN1_GENERALIZEDTIME.c
 lib/SPVM/Net/SSLeay/ASN1_GENERALIZEDTIME.config
 lib/SPVM/Net/SSLeay/ASN1_GENERALIZEDTIME.pm
 lib/SPVM/Net/SSLeay/ASN1_GENERALIZEDTIME.spvm
+lib/SPVM/Net/SSLeay/ASN1_INTEGER.c
+lib/SPVM/Net/SSLeay/ASN1_INTEGER.config
+lib/SPVM/Net/SSLeay/ASN1_INTEGER.pm
+lib/SPVM/Net/SSLeay/ASN1_INTEGER.spvm
 lib/SPVM/Net/SSLeay/ASN1_OBJECT.c
 lib/SPVM/Net/SSLeay/ASN1_OBJECT.config
 lib/SPVM/Net/SSLeay/ASN1_OBJECT.pm
