@@ -4,6 +4,7 @@
     * Add Net::SSLeay::OCSP#response_status method.
     * Add Net::SSLeay::ASN1_TIME class.
     * Add Net::SSLeay::ASN1_GENERALIZEDTIME class.
+    * Add Net::SSLeay::ASN1_INTEGER class.
 0.012 2024-11-13
   [New Features]
     * Add Net::SSLeay::X509_STORE_CTX#set_error method.
